# cmake-sqlitecpp

./: .gitignore  CMakeLists.txt  README.md  build-android.sh  build.sh
db/: todo.db3
src/: main.cpp
